--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "aleostudio/salesforce-rest",
     "description": "A simple PHP package to integrate the SalesForce REST API to your CRM",
+    "version": "1.0.0",
     "keywords": [ "aleostudio", "php", "package", "salesforce", "rest", "api", "crm" ],
     "homepage": "https://github.com/aleostudio/salesforce-rest",
     "type": "package",
