--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.2",
-        "guzzlehttp/guzzle": "^6.3@dev"
+        "guzzlehttp/guzzle": "^6.3@dev",
+        "stevenmaguire/oauth2-salesforce": "^1.0@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3@dev"
