--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
     "minimum-stability": "dev",
     "prefer-stable" : true,
     "require": {
-        "php": ">=7.2",
-        "guzzlehttp/guzzle": "^6.3@dev",
-        "stevenmaguire/oauth2-salesforce": "^1.0"
+        "php": ">=7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3@dev"
