--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "minimum-stability": "dev",
     "prefer-stable" : true,
     "require": {
-        "php": ">=7.2"
+        "php": ">=7.2",
+        "stevenmaguire/oauth2-salesforce": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3@dev"
